# son-of-anton

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
anton/: audit.py  cli.py  config.py  db.py  llm.py  prompts.py  service.py
anton/retrieval/: __init__.py  base.py  stub.py
config/: settings.example.yaml
docs/superpowers/plans/: 2026-07-15-on-call-oracle-phase1.md  2026-07-15-son-of-anton-phase1.md
docs/superpowers/specs/: 2026-07-15-on-call-oracle-design.md  2026-07-15-son-of-anton-design.md
migrations/: 20260715120000_create_incidents.sql  20260715120100_create_agent_trajectories.sql  20260715120200_create_tool_calls.sql  20260715120300_create_proposed_actions.sql  20260715120400_create_approvals.sql  20260715120500_create_audit_llm_calls.sql  20260715120600_create_slack_installations.sql
oracle/: audit.py  cli.py  config.py  db.py  llm.py  service.py  types.py
oracle/retrieval/: __init__.py  base.py  stub.py
prompts/: generic.v1.yaml
tests/integration/: conftest.py  test_audit_integration.py  test_db_migrations.py  test_e2e_phase1.py
tests/unit/: test_audit.py  test_cli.py  test_config.py  test_llm.py  test_prompts.py  test_retrieval_stub.py  test_scaffold.py  test_service.py  test_types.py
