[project]
name = "son-of-anton"
version = "0.1.0+phase1"
description = "Multi-agent AI on-call assistant for data teams. Named after Gilfoyle's autonomous SRE bot in Silicon Valley."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Mona Alkhatib", email = "muna.alkhateeb@gmail.com" }]
dependencies = [
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "typer>=0.15,<0.16",
    "litellm>=1.55,<2",
    "anthropic>=0.42,<1",
    "tenacity>=9,<10",
    "structlog>=24.4,<25",
    "asyncpg>=0.30,<0.31",
    "pyyaml>=6.0,<7",
    "orjson>=3.10,<4",
    "rich>=13.9,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5,<6",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2",
    "types-PyYAML",
]

[project.scripts]
anton = "anton.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anton"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires docker-compose stack + optional ANTHROPIC_API_KEY",
    "needs_llm: requires a live Anthropic API key",
]
